@@ -480,6 +480,7 @@ enum
     REBIND_KEYPAD,
     NO_CONVERT,
     BACKUP_FILE,
+    INSECURE_BACKUP,
     NO_COLOR_SYNTAX,
     PRESERVE,
     HISTORYLOG,
